samples/_failures_safe/1761255112_46c26b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e110805.c: In function ‘main’:
./samples/SAFE/__tmp_9e110805.c:155:33: error: expected ‘;’ at end of input
  155 |                     print_matrix
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_9e110805.c:155:21: error: expected declaration or statement at end of input
  155 |                     print_matrix
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_9e110805.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9e110805.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9e110805.c:155:21: error: expected declaration or statement at end of input
